[package]
name = "wt"
version = "0.1.2"
description = "A very simple bodyweight tracking application"
authors = ["Jared Stevens"]
homepage = "https://itsthatdude.com"
edition = "2024"


[dependencies]
chrono = "0.4.40"
directories = "6.0.0"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3